@@ -7,6 +7,9 @@ ${squirrelsql.changelog.header}
 
 Enhancements:
 
+New default SQL driver for LucidDB (Thanks to Brandon Jackson)
+	To use the new default driver, it must be imported (Menu Drivers => Install default driver definitions)  
+
 In the case of running out of memory, we try to close all result tabs, hoping, to free some memory.
 	This may help the user to save his work and restart SQuirreL by a clean way.
 
